--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-video.save.root.directory=/tmp/stabilizer
-video.ffmpeg.location=/home/theurich/TempX/ffmpeg-git-20180208-64bit-static/ffmpeg
 debug=true
+stabilizer.video.save.root.directory=/tmp/stabilizer
+stabilizer.video.ffmpeg.location=/home/theurich/TempX/ffmpeg-git-20180208-64bit-static/ffmpeg
+
 # MULTIPART (MultipartProperties)
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=0
-spring.servlet.multipart.location=/tmp/stabilizerTmp
+spring.servlet.multipart.location=/tmp
 spring.servlet.multipart.max-file-size=256MB
-spring.servlet.multipart.max-request-size=10MB # Max request size. Values can use the suffixes "MB" or "KB" to indicate megabytes or kilobytes, respectively.
+spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.resolve-lazily=false
+spring.freemarker.template-loader-path:classpath:/templates
+spring.freemarker.suffix:.ftl
