- Changed a bunch of things -- add integration test -- add parameters for vidstab -- add materializecss -- a lot of things more

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.servlet.multipart.location=/tmp
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.resolve-lazily=false
-spring.freemarker.template-loader-path:classpath:/templates
-spring.freemarker.suffix:.ftl
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
+spring.freemarker.cache=false
+spring.resources.add-mappings=true
